--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comentarios en XGM Web	</title>
-	<atom:link href="https://xavigm.github.io/cloud//comments/feed/" rel="self" type="application/rss+xml" />
-	<link>https://xavigm.github.io/cloud//</link>
+	<atom:link href="https://xavigm.github.io/cloud/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>https://xavigm.github.io/cloud/</link>
 	<description>Web &#38; Cloud</description>
 	<lastBuildDate>Mon, 24 Aug 2020 19:45:09 +0000</lastBuildDate>
 	<sy:updatePeriod>
@@ -20,7 +20,7 @@
 	<item>
 		<title>
 		Comentario en Hosting por Un comentarista de WordPress		</title>
-		<link>https://xavigm.github.io/cloud//2020/08/23/hola-mundo/#comment-1</link>
+		<link>https://xavigm.github.io/cloud/2020/08/23/hola-mundo/#comment-1</link>
 
 		<dc:creator><![CDATA[Un comentarista de WordPress]]></dc:creator>
 		<pubDate>Sun, 23 Aug 2020 18:30:49 +0000</pubDate>
