--- a/feed/index.html
+++ b/feed/index.html
@@ -9,8 +9,8 @@
 
 <channel>
 	<title>XGM Web</title>
-	<atom:link href="https://xavigm.github.io/cloud/cloud//feed/" rel="self" type="application/rss+xml" />
-	<link>https://xavigm.github.io/cloud/cloud//</link>
+	<atom:link href="https://xavigm.github.io/cloud/feed/" rel="self" type="application/rss+xml" />
+	<link>https://xavigm.github.io/cloud/</link>
 	<description>Web &#38; Cloud</description>
 	<lastBuildDate>Mon, 24 Aug 2020 19:45:09 +0000</lastBuildDate>
 	<language>es</language>
@@ -21,8 +21,8 @@
 	<generator>https://wordpress.org/?v=5.5.3</generator>
 	<item>
 		<title>Hosting</title>
-		<link>https://xavigm.github.io/cloud/cloud//2020/08/23/hola-mundo/</link>
-					<comments>https://xavigm.github.io/cloud/cloud//2020/08/23/hola-mundo/#comments</comments>
+		<link>https://xavigm.github.io/cloud/2020/08/23/hola-mundo/</link>
+					<comments>https://xavigm.github.io/cloud/2020/08/23/hola-mundo/#comments</comments>
 		
 		<dc:creator><![CDATA[admin]]></dc:creator>
 		<pubDate>Sun, 23 Aug 2020 18:30:49 +0000</pubDate>
@@ -34,7 +34,7 @@
 <p>Aloja tu web y correo electronico totalmente gestionado.</p>
 ]]></content:encoded>
 					
-					<wfw:commentRss>https://xavigm.github.io/cloud/cloud//2020/08/23/hola-mundo/feed/</wfw:commentRss>
+					<wfw:commentRss>https://xavigm.github.io/cloud/2020/08/23/hola-mundo/feed/</wfw:commentRss>
 			<slash:comments>1</slash:comments>
 		
 		
