blog link fixed

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ var wp = {"is_user_logged_in":"","admin_email":"xavi@xavigonzalez.net","blogname
 <button class="close close-main-nav-toggle" data-toggle-target=".main-menu-modal" data-toggle-body-class="showing-main-menu-modal" aria-expanded="false" data-set-focus=".main-menu-modal"><span></span></button>
 <div class="mobile-menu" aria-label="M&oacute;vil">
 <div class="menu-menu-1-container"><ul id="primary-menu" class="menu main-menu-modal"><li id="menu-item-115" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-8 current_page_item menu-item-115"><a href="https://xavigm.github.io/cloud/" aria-current="page">Inicio</a></li>
-<li id="menu-item-116" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-116"><a href="https:https://xavigm.github.io">Blog</a></li>
+<li id="menu-item-116" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-116"><a href="http://blog.xavigonzalez.net">Blog</a></li>
 <li id="menu-item-117" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-117"><a href="https://xavigm.github.io/cloud/contacto/">Contacto</a></li>
 <li id="menu-item-118" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-118"><a href="https://xavigm.github.io/cloud/sobre-mi-xavi-gonzalez/">Sobre mi</a></li>
 </ul></div> </div>
